app/files/css/environment.css
.environment {
  font-family: monospace;
  display: inline;
}

.environment table {
  width: 100%;
  margin: 1em 0;
}

.environment .keypair {
  padding: 0.4em 1em;
  border: 1px dotted rgba(132, 132, 132, 0.1);
}

.environment .key {
  color: #ddd;
}

.environment .value {
  color: #999;
}

.environment .syntax {
  color: #555;
}

.environment .btn {
  margin-bottom: 0.4em;
  font-family: sans-serif;
  font-size: 0.7em;
  padding: 0.2em 0.4em;
  margin-left: 1em;
}

.environment .btn .icon {
  margin-left: 0.2em;
}

.environment .keypairs {
  background-color: #1d1d1d;
  padding: 1em;
  margin-left: 1em;
  display: block;
  min-width: 60%;
  font-size: 0.8em;
  position: absolute;
  border: 1px solid rgba(240,240,240,0.3);
}

